--- a/.github/workflows/pr_dev.yml
+++ b/.github/workflows/pr_dev.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/github-script@0.2.0  // github-script 액션을 사용한다.
         with:
           github-token: ${{github.token}}  // github token을 선언해준다
-          script: |                        // script에 원하는 스크립트를 작성
+          script: |
             const ref = "${{github.ref}}"
             const pull_number = Number(ref.split("/")[2])
             await github.pulls.createReview({
