--- a/.github/workflows/pr_dev.yml
+++ b/.github/workflows/pr_dev.yml
@@ -46,9 +46,9 @@ jobs:
       
       
       - name: if fail
-        uses: actions/github-script@0.2.0  // github-script 액션을 사용한다.
+        uses: actions/github-script@0.2.0
         with:
-          github-token: ${{github.token}}  // github token을 선언해준다
+          github-token: ${{github.token}}
           script: |
             const ref = "${{github.ref}}"
             const pull_number = Number(ref.split("/")[2])
