--- a/.github/workflows/pr_dev.yml
+++ b/.github/workflows/pr_dev.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: lint
         working-directory: ./ 
-        run: npm lint
+        run: npm run lint
 
 
       - name: build
