--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.0",
+    "swagger-ui-express": "^4.6.2",
     "ulid": "^2.3.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
