--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.9.0",
     "aws-sdk": "^2.1320.0",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cache-manager-ioredis": "^2.1.0",
     "cache-manager-redis-store": "^3.0.1",
