--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@prisma/client": "^4.9.0",
     "aws-sdk": "^2.1320.0",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.2.0",
     "cache-manager-ioredis": "^2.1.0",
     "cache-manager-redis-store": "^3.0.1",
     "cheerio": "^1.0.0-rc.12",
@@ -72,6 +73,7 @@
     "@nestjs/testing": "^9.3.10",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-ioredis": "^2.0.3",
     "@types/cheerio": "^0.22.31",
     "@types/connect-redis": "^0.0.20",
