--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.9.0",
     "aws-sdk": "^2.1320.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.0",
     "cache-manager-ioredis": "^2.1.0",
@@ -54,6 +55,7 @@
     "ioredis": "^5.3.1",
     "joi": "^17.7.0",
     "nest-winston": "^1.8.0",
+    "overpass-ts": "^4.3.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
