--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.0",
+    "twilio": "^4.11.0",
     "ulid": "^2.3.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
