--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-validator": "^0.14.0",
     "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "dotenv-cli": "^6.0.0",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
